Fix bg animation being behind text and interrupting reading-flow

--- a/src/app/home/about/about.component.scss
+++ b/src/app/home/about/about.component.scss
@@ -18,6 +18,7 @@
         gap: 20px;
         margin-bottom: 40px;
         margin-top: 2rem;
+        background: var(--mat-sys-surface);
 
         @media (max-width: 768px) {
             grid-template-columns: 1fr;
