--- a/src/app/home/banner/banner.component.scss
+++ b/src/app/home/banner/banner.component.scss
@@ -41,6 +41,7 @@
 
             .banner-description {
                 margin-bottom: 70px;
+                background: var(--mat-sys-surface);
             }
 
             p {
