--- a/src/app/home/experience/experience.component.scss
+++ b/src/app/home/experience/experience.component.scss
@@ -24,6 +24,7 @@
         flex-direction: column;
         gap: 2rem;
         // width: 80%;
+        background: var(--mat-sys-surface);
     }
 
     .timeline::before {
